--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "escape-string-regexp": "^1.0.5",
     "lodash": "^4.15.0",
     "prop-types": "^15.5.6",
-    "react": ">=0.14.0",
+    "react": "^15.5.4",
     "react-addons-shallow-compare": ">=0.14.0",
-    "react-virtualized": "^9.7.4",
+    "react-virtualized": "^9.19.1",
     "store": "^2.0.4"
   },
   "devDependencies": {
